RESOLVED FIXED 93491
CanvasRenderContext2D::setFont() should ignore inherited properties and default keyword value
https://bugs.webkit.org/show_bug.cgi?id=93491
Summary CanvasRenderContext2D::setFont() should ignore inherited properties and defau...
Thiago Marcos P. Santos
Reported 2012-08-08 09:38:27 PDT
Fixes canvas/philip/tests/2d.text.font.parse.invalid.html test case.
Attachments
Patch (7.15 KB, patch)
2012-08-08 10:28 PDT, Thiago Marcos P. Santos
no flags
Patch (8.46 KB, patch)
2012-08-08 11:58 PDT, Thiago Marcos P. Santos
no flags
Thiago Marcos P. Santos
Comment 1 2012-08-08 10:28:37 PDT
Kenneth Rohde Christiansen
Comment 2 2012-08-08 10:35:20 PDT
Comment on attachment 157246 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=157246&action=review > Source/WebCore/ChangeLog:12 > + change was done in the property validation and will also affect the > + CSS font parsing, but it is probably harmless since font doesn't > + recognize the default keyword anyway. Could it be tested? > LayoutTests/ChangeLog:13 > + * platform/chromium/TestExpectations: > + * platform/efl/Skipped: > + * platform/gtk/TestExpectations: > + * platform/qt/Skipped: Is this passing on mac and if so, why?
Thiago Marcos P. Santos
Comment 3 2012-08-08 11:41:45 PDT
Comment on attachment 157246 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=157246&action=review >> Source/WebCore/ChangeLog:12 >> + recognize the default keyword anyway. > > Could it be tested? It is tested by the test case I'm unskipping. If you are talking about regressions on CSS, I ran the layout tests and got none. >> LayoutTests/ChangeLog:13 >> + * platform/qt/Skipped: > > Is this passing on mac and if so, why? It is passing because mac has the wrong expectations. Gonna fix that.
Thiago Marcos P. Santos
Comment 4 2012-08-08 11:58:31 PDT
WebKit Review Bot
Comment 5 2012-08-08 16:59:52 PDT
Comment on attachment 157265 [details] Patch Clearing flags on attachment: 157265 Committed r125118: <http://trac.webkit.org/changeset/125118>
WebKit Review Bot
Comment 6 2012-08-08 17:00:00 PDT
All reviewed patches have been landed. Closing bug.
Dominik Röttsches (drott)
Comment 7 2012-09-21 05:33:55 PDT
*** Bug 48578 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.