CanvasRenderContext2D::setFont() should ignore inherited properties and default keyword value https://bugs.webkit.org/show_bug.cgi?id=93491

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-08-08
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Treat "inherit" as an invalid value. Also ignore the "default"
keyword that was previously treated as a font family. This second
change was done in the property validation and will also affect the
CSS font parsing, but it is probably harmless since font doesn't
recognize the default keyword anyway.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseFontFamily):
* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::setFont):

LayoutTests:

Unskipped tests that are now passing after this fix and removed wrong
expectations.

* platform/chromium/TestExpectations:
* platform/chromium/canvas/philip/tests/2d.text.font.parse.invalid-expected.txt: Removed.
* platform/efl/Skipped:
* platform/gtk/TestExpectations:
* platform/mac/canvas/philip/tests/2d.text.font.parse.invalid-expected.txt: Removed.
* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/111414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125118 268f45cc-cd09-0410-ab3c-d52691b4dbfc